--- a/static/src/css/shared.css
+++ b/static/src/css/shared.css
@@ -516,6 +516,7 @@ nav {
   border: none;
   cursor: pointer;
   text-align: left;
+  box-sizing: border-box;
 }
 #mobile-header .mobile-nav-links > li > a:hover, #mobile-header .mobile-nav-links > li > button:hover {
   background: var(--bg-dark);
